# Path-Resonance-Memory-Architecture

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  experiment.yml
.github/workflows/: ci.yml
configs/: baseline.json  legacy-dynamics-smoke.json
docs/: ARCHITECTURE.md  DYNAMICS.md  LEGACY_MIGRATION.md  RECALL_PROTOCOL.md  REPRODUCIBILITY.md  RESEARCH_ROADMAP.md
experiments/: README.md
src/prma/: __init__.py  __main__.py  cli.py  config.py  dynamics.py  encoding.py  experiment.py  metrics.py  model.py  recall.py  topology.py
tests/: test_config.py  test_dynamics.py  test_encoding.py  test_experiment.py  test_model.py  test_recall.py  test_topology.py
tests/fixtures/: README.md  legacy_model2_golden.json
